<resources>
    <string name="app_name">大腕</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="main_bottom_chat">Chats</string>
    <string name="main_bottom_contact">Contacts</string>
    <string name="main_bottom_find">Discover</string>
    <string name="main_bottom_me">Me</string>
    <string name="fragment_chat_contact_qinyou">亲友</string>
    <string name="fragment_chat_contact_friend">朋友</string>
    <string name="now_refresh_list">正在刷新联系人</string>
    <string name="get_failed_please_check">获取失败,请检查网络或稍后再试</string>
    <string name="Has_agreed_to_your_friend_request">已同意你的好友请求</string>
    <string name="Request_to_add_you_as_a_friend">请求加你为好友</string>
    <string name="Apply_to_the_group_of">申请加入群：</string>
    <string name="Has_agreed_to">已同意</string>
    <string name="Has_refused_to">已拒绝</string>
    <string name="Are_agree_with">正在同意...</string>
    <string name="agree">同意</string>
    <string name="Agree_with_failure">同意失败:</string>
    <string name="have_you_removed">已把你从他好友列表里移除</string>
    <string name="string_group_interested">兴趣组</string>
    <string name="work_circle">作品圈</string>
    <string name="fragment_delete_dialog">删除会话</string>
    <string name="fragment_delete_dia_and_mess">删除会话及信息</string>
    <string name="activity_chat_pic">图片</string>
    <string name="activity_chat_take_pic">拍摄</string>
    <string name="activity_chat_location">位置</string>
    <string name="activity_chat_card">名片</string>
    <string name="activity_chat_video_call">视频聊天</string>
    <string name="activity_chat_voice_call">语音聊天</string>
    <string name="activity_chat_move_up_to_cancel">手指上滑，取消发送</string>
    <string name="button_pushtotalk">按住 说话</string>
    <string name="button_send">发送</string>
    <string name="activity_chat_not_connect_to_server"></string>
    <string name="mute">静音</string>
    <string name="Hands_free">免提</string>
    <string name="hang_up">挂断</string>
    <string name="answer">接听</string>
    <string name="call_duration">通话时长</string>
    <string name="Refused">已拒绝</string>
    <string name="The_other_party_has_refused_to">对方已拒绝</string>
    <string name="The_other_is_not_online">对方不在线</string>
    <string name="The_other_is_on_the_phone">对方正在通话中</string>
    <string name="The_other_party_did_not_answer">对方未接听</string>
    <string name="did_not_answer">未接听</string>
    <string name="Has_been_cancelled">已取消</string>
    <string name="Are_connected_to_each_other">正在连接对方...</string>
    <string name="Is_not_yet_connected_to_the_server">尚未连接至服务器</string>
    <string name="have_connected_with">已经和对方建立连接，等待对方接受...</string>
    <string name="In_the_call">通话中...</string>
    <string name="The_other_party_refused_to_accept">对方拒绝接受！...</string>
    <string name="Connection_failure">连接建立失败！...</string>
    <string name="The_other_party_is_not_online">对方不在线，请稍后再拨...</string>
    <string name="The_other_is_on_the_phone_please">对方正在通话中，请稍后再拨</string>
    <string name="The_other_is_hang_up">对方已经挂断</string>
    <string name="The_other_party_did_not_answer_new">对方未接听</string>
    <string name="direct_call">Direct</string>
    <string name="relay_call">Relay</string>
    <string name="hanging_up">正在挂断..</string>
    <string name="Network_error">网络出错</string>
    <string name="please_check">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="location_message">位置信息</string>
    <string name="Making_sure_your_location">正在确定你的位置...</string>
    <string name="receive_the_passthrough">收到透传：action：</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="voice">[声音]</string>
    <string name="video">[视频]</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="User_name_cannot_be_empty">用户名不能为空！</string>
    <string name="Password_cannot_be_empty">密码不能为空！</string>
    <string name="Is_landing">正在登录...</string>
    <string name="login_failure_failed">登录失败: 获取好友或群聊失败</string>
    <string name="Login_failed">登录失败:</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="group_chat">群聊</string>
    <string name="Confirm_password_cannot_be_empty">确认密码不能为空!</string>
    <string name="Two_input_password">两次输入的密码不一致，请重新输入!</string>
    <string name="Is_the_registered">正在注册...</string>
    <string name="Registered_successfully">注册成功</string>
    <string name="network_anomalies">网络异常，请检查网络！</string>
    <string name="User_already_exists">用户已存在！</string>
    <string name="registration_failed_without_permission">注册失败，无权限！</string>
    <string name="Registration_failed">注册失败:</string>
    <string name="illegal_user_name">用户名不合法</string>
    <string name="Cant_chat_with_yourself">不能和自己聊天</string>
    <string name="can_not_connect_chat_server_connection">连接不到聊天服务器</string>
    <string name="the_current_network">当前网络不可用，请检查网络设置</string>
    <string name="Invite_you_to_join_a_group_chat">邀请你加入了群聊</string>
    <string name="Agreed_to_your_group_chat_application">同意了你的群聊申请</string>
    <string name="Remove_the_notification">移除通知</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="Logoff_notification">下线通知</string>
    <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="error_send_invalid_content">你发送了不合法的消息内容</string>
    <string name="error_send_not_in_the_group">你已经不在此群了</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="Into_the_blacklist">移入到黑名单？</string>
    <string name="Have_downloaded">已下载</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="Did_not_download">未下载</string>
    <string name="Download_the_pictures">下载图片: 0%</string>
    <string name="Download_the_pictures_new">下载图片:</string>
    <string name="you_are_group">你被群创建者从此群中移除</string>
    <string name="the_current_group">当前群聊已被群创建者解散</string>
    <string name="sd_card_does_not_exist">SD卡不存在，不能拍照</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="unable_to_get_loaction">无法获取到您的位置信息!</string>
    <string name="delete">删除</string>
    <string name="forward">转发</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="activity_whistleblowing_reason_title1">请选择举报原因</string>
    <string name="activity_whistleblowing_reason_1">色情低俗</string>
    <string name="activity_whistleblowing_reason_2">广告敏感</string>
    <string name="activity_whistleblowing_reason_3">政治敏感</string>
    <string name="activity_whistleblowing_reason_4">谣言</string>
    <string name="activity_whistleblowing_reason_5">欺诈骗钱</string>
    <string name="activity_whistleblowing_reason_6">违法（暴力恐怖、违禁品等）</string>
    <string name="activity_whistleblowing_reason_7">侵权举报（诽谤、抄袭、冒用...）</string>
    <string name="activity_whistleblowing_reason_title2">请举证（选填）</string>
    <string name="activity_whistleblowing_reason_8">补充说明</string>
    <string name="activity_whistleblowing_nowrite">未填写</string>
    <string name="hello_html"><![CDATA[Hello <b>World</b>!]]></string>
    <string name="activity_chat_background_setting1">选择背景图</string>
    <string name="activity_chat_background_setting2">从手机相册选择</string>
    <string name="activity_chat_background_setting3">拍一张</string>
    <string name="group_chat_name">群聊名称</string>
    <string name="group_chat_icon">群头像</string>
    <string name="group_chat_capacity">群聊大小</string>
    <string name="set_top">置顶聊天</string>
    <string name="message_no_interrupt">消息免打扰</string>
    <string name="my_nickname">我在本群的昵称</string>
    <string name="set_chat_backgroup">设置本群的聊天背景</string>
    <string name="clear_chat_history">清空聊天记录</string>
    <string name="report">举报</string>
    <string name="delete_exit_group_chat">删除并退出</string>
    <string name="dismiss_the_group_chat">解散此群</string>
    <string name="used_group_name">原本的群名称</string>
    <string name="group_name_info">在此处修改的昵称，只会在此群显示。昵称长度不超过18字</string>
    <string name="group_my_name_info">在此设置的自己昵称只会在此群内显示</string>
    <string name="save">保存</string>
    <string name="fragment_chat_contact_search_hint">DW号、手机号、昵称、实名</string>
    <string name="address_list">联系人 </string>
    <string name="refreshing_group_list">正在刷新群列表</string>
    <string name="not_delete_myself">不能删除自己</string>
    <string name="Are_removed">正在移除...</string>
    <string name="confirm_the_members">确认将此成员加入至此群黑名单?</string>
    <string name="Failed_to_get_group_chat_information">获取群聊信息失败:</string>
    <string name="Delete_failed">删除失败:</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="people">人)</string>
    <string name="being_added">正在添加...</string>
    <string name="is_quit_the_group_chat">正在退出群聊...</string>
    <string name="chatting_is_dissolution">正在解散群聊...</string>
    <string name="are_empty_group_of_news">正在清空群消息...</string>
    <string name="is_modify_the_group_name">正在修改群名称...</string>
    <string name="Modify_the_group_name_successful">修改群名称成功</string>
    <string name="change_the_group_name_failed_please">改变群名称失败，请检查网络或稍后重试</string>
    <string name="Are_moving_to_blacklist">正在移入至黑名单</string>
    <string name="failed_to_move_into">移入黑名单失败,请检查网络或稍后重试</string>
    <string name="sure_to_empty_this">确定清空此群的聊天记录吗？</string>
    <string name="Add_group_members_fail">添加群成员失败:</string>
    <string name="sure">确定</string>
    <string name="add_guarantee_money">输入担保金（不低于300元）</string>
    <string name="add_guarantee_info">在此处输入被担保人手机号码</string>
    <string name="add_grarantee_long_info">在此处为朋友做担保，担保金300元，朋友在注册环节可选择跳过审核这一环节。</string>
    <string name="validate">朋友验证</string>
    <string name="validate_long_info">需要发送验证申请，等待对方通过。(此次添加申请需扣除10个虚拟币)</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="to_login_info">用户名、手机号、身份证号</string>
    <string name="mobile_num">手机号码</string>
    <string name="get_identify_code">获取验证码</string>
    <string name="input_identify_code">请输入验证码</string>
    <string name="identify_code_wrong">验证码不正确</string>
    <string name="name_interesting_group">兴趣组名称</string>
    <string name="next">下一步</string>
    <string name="name_not_null">组名不允许为空</string>
    <string name="activity_modification_password_two_1">请按提示操作，重置密码</string>
    <string name="activity_modification_password_two_2">身份证号</string>
    <string name="activity_modification_password_two_id">请输入注册时验证的身份证号码</string>
    <string name="activity_modification_password_two_3">新的密码</string>
    <string name="activity_modification_password_two_new_password">请设置新的密码</string>
    <string name="forget_psw">忘记密码了吗？</string>
    <string name="software_version_code">软件版本号:</string>
    <string name="database_version_code">数据库版本号：</string>
    <string name="software_version_name">软件版本名：</string>
    <string name="check_new_version">检查新版本</string>
</resources>