<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog2_bg" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/dialog_test_icon" />

    <TextView
        android:id="@+id/tv_guarantee_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="深水鱼"
        android:textColor="@color/black"
        android:textSize="36px" />

    <LinearLayout
        android:layout_width="197dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:background="@drawable/dialog_et_bg" >

        <EditText
            android:id="@+id/et_guarantee_info"
            android:layout_width="192dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:hint="@string/add_guarantee_info"
            android:maxLength="11"
            android:phoneNumber="true"
            android:singleLine="true"
            android:textColor="#4A4A4A"
            android:textSize="24px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="197dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:background="@drawable/dialog_et_bg" >

        <EditText
            android:id="@+id/et_guarantee_money"
            android:layout_width="192dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:hint="@string/add_guarantee_money"
            android:phoneNumber="true"
            android:singleLine="true"
            android:textColor="#4A4A4A"
            android:textSize="24px" />
    </LinearLayout>

    <TextView
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="214dp"
        android:text="@string/add_grarantee_long_info"
        android:textColor="@color/darkgray"
        android:textSize="24px" />

    <Button
        android:id="@+id/btn_guarantee_confirm"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="325dp"
        android:background="@drawable/dialog_click_selector"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:textSize="24px" />

</RelativeLayout>